--- a/index.html
+++ b/index.html
@@ -2,12 +2,145 @@
 <html>
     <head>
 
-            <link rel="stylesheet" href="style.css">
+
+        <title>Joe Mama</title>
+        <link rel="stylesheet" href="style.css">
+
+        <script src="functions.js"></script>
 
     </head>
     <body>
-        
+        <div>
+            <h1>ARE WE COMPTIBLE?!</h1>
 
+            <label for="">whats your name?</label>
+            <input type="text" name="joe" id = "joe">
+
+            <br>
+            <br>
+
+            <label for="">What is most important to you</label>
+
+            <br>
+            <input type="radio" name="personality"><p>Personality</p>
+            <br>
+            <input type="radio" name="personality"><p>Personality</p>
+            <br>
+            <input type="radio" name="personality"><p>Personality</p>
+            <br>
+            <input type="radio" name="personality"> <p style="font-size: 20%;">Attractiveness</p>
+
+            <br>
+            <br>
+
+            <label for="">Does size matter?</label>
+
+            <br>
+            <input type="radio" name="size" id="yes">       <p>yes</p>
+            <br>
+            <input type="radio" name="size">        <p>No</p>
+
+
+            <br><br>
+            <label for="">checkbox</label>
+            <input type="checkbox">
+            <br>
+            <br>
+
+            <label for="">submit</label>
+            <input type="submit">
+            <br>
+            <br>
+
+            <label for="">button</label>
+            <input type="button" name="Button" onclick="stylisticChange()">
+            <br>
+            <br>
+
+            <label for="">color</label>
+            <input type="color">
+            <br>
+            <br>
+
+            <label for="">date</label>
+            <input type="date">
+            <br>
+            <br>
+
+            <label for="">datetime</label>
+            <input type="datetime">
+            <br>
+            <br>
+
+            <label for="">email</label>
+            <input type="email">
+            <br>
+            <br>
+
+            <label for="">file</label>
+            <input type="file">
+            <br>
+            <br>
+
+            <label for="">hidden</label>
+            <input type="hidden">
+            <br>
+            <br>
+
+            <label for="">image</label>
+            <input type="image">
+            <br>
+            <br>
+
+            <label for="">month</label>
+            <input type="month">
+            <br>
+            <br>
+
+            <label for="">number</label>
+            <input type="number">
+            <br>
+            <br>
+            
+            <label for="">password</label>
+            <input type="password">
+            <br>
+            <br>
+
+            <label for="">range</label>
+            <input type="range">
+            <br>
+            <br>
+
+            <label for="">reset</label>
+            <input type="reset">
+            <br>
+            <br>
+
+            <label for="">search</label>
+            <input type="search">
+            <br>
+            <br>
+
+            <label for="">tel</label>
+            <input type="tel">
+            <br>
+            <br>
+
+            <label for="">time</label>
+            <input type="time">
+            <br>
+            <br>
+
+            <label for="">url</label>
+            <input type="url">
+            <br>
+            <br>
+
+            <label for="">week</label>
+            <input type="week">
+        </form>
+    </div>
 
 
     </body>
