--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
             <br>
             <input type="radio" name="size" id="yes">       <p>yes</p>
             <br>
+
+            <input type="radio" class = "yaga" name="size2" id="size">       <p class = "yaga">yes</p>
+            <br>
+
+            <input type="radio" class = "yaga" name="size2" id="size">       <p class = "yaga" >yes</p>
+            <br>
+
+            <input type="radio" class = "yaga" name="size2" id="size">       <p class = "yaga">yes</p>
+            <br>
+
+            <input type="radio" class = "yaga" name="size2" id="size">       <p class = "yaga">yes</p>
+            <br>
+
             <input type="radio" name="size">        <p>No</p>
 
 
